[package]
name = "clipurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
copypasta = { git = "https://github.com/alacritty/copypasta", rev = "ecafec9" }
rusqlite = { version = "0.26", features = ["bundled"] }
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.2"

[profile.release]
codegen-units = 1
lto = true