[package]
name = "clipurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3", default-features = false, features = ["derive", "std"] }
copypasta = "0.8"
rusqlite = { version = "0.28", features = ["bundled"] }
tokio = { version = "1", features = ["macros", "rt", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.2"

[profile.release]
codegen-units = 1
lto = true