[package]
name = "clipurl"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", default-features = false, features = ["derive", "std"] }
copypasta = "0.10"
rusqlite = { version = "0.33" }
tokio = { version = "1", features = ["macros", "rt", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

[profile.release]
codegen-units = 1
lto = true
